--- a/dehydrated/config
+++ b/dehydrated/config
@@ -77,7 +77,7 @@ CHALLENGETYPE="dns-01"
 #
 # BASEDIR and WELLKNOWN variables are exported and can be used in an external program
 # default: <unset>
-#HOOK="${BASEDIR}/hooks.sh"
+HOOK="${BASEDIR}/hooks.sh"
 
 # Chain clean_challenge|deploy_challenge arguments together into one hook call per certificate (default: no)
 #HOOK_CHAIN="no"
